<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForSight Food</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stores_title_text">Available Stores</string>
    <string name="descriptionText">Description</string>
    <string name="addDescHintText">Add Description</string>
    <string name="locationText">Location</string>
    <string name="locatedWhereHintText">Located where?</string>
    <string name="categoryText">Categories</string>
    <string name="CategoryHintText">Categorize</string>
    <string name="taggedText">Tagged</string>
    <string name="nfcText">NFC</string>
    <string name="barCodeText">Bar Code</string>
    <string name="noneText">None</string>
    <string name="lastUpdatedText">Last Updated</string>
    <string name="manageItemsTitleText">Stores Item</string>
    <string name="saveText">Save</string>
    <string name="clearText">Clear</string>
    <string name="unitMgmtTitle">Unit Management</string>
    <string name="unitUnitText">Units</string>
    <string name="unitDescHint">Unit Description</string>
    <string name="unitNoteTitleText">Note;\:</string>
    <string name="unitSystemTitleText">System</string>
    <string name="wandmListTitle">WEIGHTS &amp; MEASURES</string>
    <string name="double_arrow"><![CDATA[<==>]]></string>
    <string name="units_conversion">Units Conversion</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="a">a</string>
    <string name="weights_and_measures">Weights and Measures</string>
    <string name="liter">Liter</string>
    <string name="rightarrow"><![CDATA[----->]]></string>
    <string name="zero4decimal">0.0000</string>
    <string name="cup">Cup</string>
    <string name="_1">1</string>
    <string name="where_to">WHERE TO?</string>
    <string name="what_s_in_stores">WHAT\'S IN STORES!</string>
    <string name="manage_stores">MANAGE STORES</string>
    <string name="manage_units">MANAGE UNITS</string>
    <string name="edit_unit_title">edit_unit_title</string>
    <string name="id">Id</string>
    <string name="description">Description</string>
    <string name="unit_base_system">Unit Base System</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="i">I</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="spce_15" />
    <string name="spce_8" />
    <string name="is_equivalent_to">is equivalent to:</string>
    <string name="converted_to">converted to:</string>
    <string name="_1_unit_of">1 unit of:</string>
    <string name="twodecplace">%.2f</string>
    <string name="in">in</string>

    <string-array name="dummy_stores_list">
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**four</item>
    </string-array>

    <string-array name="dummy_stores_list2">
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**one</item>, <item>**two</item>, <item>**three</item>,
        <item>**four</item>
    </string-array>
    <string name="error_missing">ERROR:Missing</string>

</resources>
