<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/manageItemsTitleText"
        android:id="@+id/wandmtextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionText"
        android:id="@+id/textView2"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/wandmtextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemDescription"
        android:hint="@string/addDescHintText"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#162700ff"
        android:layout_alignParentRight="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationText"
        android:id="@+id/textView3"
        android:layout_below="@+id/itemDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemLocation"
        android:hint="@string/locatedWhereHintText"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#162700ff"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryText"
        android:id="@+id/textView4"
        android:layout_below="@+id/itemLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemCategories"
        android:hint="@string/CategoryHintText"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#162700ff"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemCategories"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/taggedText"
            android:id="@+id/textView5"
            android:textSize="16sp"
            android:background="#ffffffff" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfcText"
            android:id="@+id/itemNFCrb"
            android:layout_marginStart="18dp"
            android:checked="false"
            android:background="#162700ff"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barCodeText"
            android:id="@+id/itemBCrb"
            android:layout_marginStart="18dp"
            android:checked="false"
            android:background="#162700ff"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noneText"
            android:id="@+id/itemNonerb"
            android:layout_marginStart="18dp"
            android:checked="false"
            android:background="#162700ff"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastUpdatedText"
            android:id="@+id/textView6"
            android:background="#ffffffff"
            android:textSize="16sp"
            android:gravity="center" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="start" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemClearBtn"
        android:text="@string/clearText"
        android:layout_below="@id/linearLayout3"
        android:layout_gravity="start"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemSaveBtn"
        android:text="@string/saveText"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />


    <!--<ListView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/itemListView"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/itemClearBtn" />-->

</RelativeLayout>
