<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/where_to"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/wandmtextView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:text="@string/what_s_in_stores"
        android:id="@+id/whats_in_stores_button"
        android:layout_below="@+id/wandmtextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:text="@string/manage_stores"
        android:id="@+id/manage_stores_button"
        android:layout_below="@+id/whats_in_stores_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:text="@string/weights_and_measures"
        android:id="@+id/weighs_and_measures_button"
        android:layout_below="@+id/manage_stores_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:text="@string/manage_units"
        android:id="@+id/manage_units_button"
        android:layout_below="@+id/weighs_and_measures_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>
